compiler/weave_syntax/tests/data/Trivia.error
error: unexpected token 'public'
        --> <source>:2:1
         |
       2 | public function TryReadTrivia(
         | ^^^^^^
error: unexpected token 'function'
        --> <source>:2:8
         |
       2 | public function TryReadTrivia(
         |        ^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:2:17
         |
       2 | public function TryReadTrivia(
         |                 ^^^^^^^^^^^^^
error: unexpected token '['
        --> <source>:2:30
         |
       2 | public function TryReadTrivia(
         |                              ^
error: unexpected token 'self'
        --> <source>:3:5
         |
       3 |     self: this mutable Lexer,   // Comment for argument 'self'
         |     ^^^^
error: unexpected token ':'
        --> <source>:3:9
         |
       3 |     self: this mutable Lexer,   // Comment for argument 'self'
         |         ^
error: unexpected token 'this'
        --> <source>:3:11
         |
       3 |     self: this mutable Lexer,   // Comment for argument 'self'
         |           ^^^^
error: unexpected token 'mutable'
        --> <source>:3:16
         |
       3 |     self: this mutable Lexer,   // Comment for argument 'self'
         |                ^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:3:24
         |
       3 |     self: this mutable Lexer,   // Comment for argument 'self'
         |                        ^^^^^
error: unexpected token ','
        --> <source>:3:29
         |
       3 |     self: this mutable Lexer,   // Comment for argument 'self'
         |                             ^
error: unexpected token '[token::identifier]'
        --> <source>:4:5
         |
       4 |     trivia: out Trivia          // Comment for argument 'trivia'
         |     ^^^^^^
error: unexpected token ':'
        --> <source>:4:11
         |
       4 |     trivia: out Trivia          // Comment for argument 'trivia'
         |           ^
error: unexpected token 'out'
        --> <source>:4:13
         |
       4 |     trivia: out Trivia          // Comment for argument 'trivia'
         |             ^^^
error: unexpected token '[token::identifier]'
        --> <source>:4:17
         |
       4 |     trivia: out Trivia          // Comment for argument 'trivia'
         |                 ^^^^^^
error: unexpected token ')'
        --> <source>:5:1
         |
       5 | )
         | ^
error: unexpected token '{'
        --> <source>:6:1
         |
       6 | {
         | ^
error: unexpected token 'if'
        --> <source>:7:5
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |     ^^
error: unexpected token 'let'
        --> <source>:7:8
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |        ^^^
error: unexpected token '[token::identifier]'
        --> <source>:7:12
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |            ^^^^
error: unexpected token '['
        --> <source>:7:16
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                ^
error: unexpected token '[token::identifier]'
        --> <source>:7:17
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                 ^^^^^^^
error: unexpected token ')'
        --> <source>:7:24
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                        ^
error: unexpected token '='
        --> <source>:7:43
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                                           ^
error: unexpected token 'self'
        --> <source>:7:72
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                                                                        ^^^^
error: unexpected token '.'
        --> <source>:7:76
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                                                                            ^
error: unexpected token '[token::identifier]'
        --> <source>:7:77
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                                                                             ^^^^^^^^^^^^^^
error: unexpected token '['
        --> <source>:7:91
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                                                                                           ^
error: unexpected token ')'
        --> <source>:7:92
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                                                                                            ^
error: unexpected token '{'
        --> <source>:7:94
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |                                                                                              ^
error: unexpected token '[token::identifier]'
        --> <source>:8:9
         |
       8 |         trivia = Trivia.Comment(comment)
         |         ^^^^^^
error: unexpected token '='
        --> <source>:8:16
         |
       8 |         trivia = Trivia.Comment(comment)
         |                ^
error: unexpected token '[token::identifier]'
        --> <source>:8:18
         |
       8 |         trivia = Trivia.Comment(comment)
         |                  ^^^^^^
error: unexpected token '.'
        --> <source>:8:24
         |
       8 |         trivia = Trivia.Comment(comment)
         |                        ^
error: unexpected token '[token::identifier]'
        --> <source>:8:25
         |
       8 |         trivia = Trivia.Comment(comment)
         |                         ^^^^^^^
error: unexpected token '['
        --> <source>:8:32
         |
       8 |         trivia = Trivia.Comment(comment)
         |                                ^
error: unexpected token '[token::identifier]'
        --> <source>:8:33
         |
       8 |         trivia = Trivia.Comment(comment)
         |                                 ^^^^^^^
error: unexpected token ')'
        --> <source>:8:40
         |
       8 |         trivia = Trivia.Comment(comment)
         |                                        ^
error: unexpected token '}', expected '[token::end-of-file]'
        --> <source>:9:5
         |
       9 |     } else {
         |     ^
